fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "프로필 사진",
   "Create a new doc": "새 문서 만들기",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} 은(는) 이 문서에 대한 액세스 권한이 없으므로 알림을 받지 않습니다.",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "링크로 유지",
   "Mention": "언급됨",
   "Embed": "내장",
@@ -627,6 +628,7 @@
   "edited": "편집됨",
   "created the collection": "컬렉션 만들기",
   "mentioned you in": "당신을 언급했습니다",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "댓글을 남겼습니다",
   "resolved a comment on": "에 대한 댓글이 해결됨",
   "reacted {{ emoji }} to your comment on": "{{ emoji }}로 댓글에 반응함",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "구독 중인 문서 또는 참여한 스레드가 댓글을 받으면 알림을 받습니다.",
   "Mentioned": "언급됨",
   "Receive a notification when someone mentions you in a document or comment": "다른 사람이 문서나 댓글에서 나를 언급하면 알림을 받습니다.",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "참여한 댓글 스레드가 해결되었을 때 알림을 받습니다.",
   "Reaction added": "반응 추가됨",
   "Receive a notification when someone reacts to your comment": "누군가 내 댓글에 반응하면 알림 받기",
