fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Profilbild",
   "Create a new doc": "Neues Dokument erstellen",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} wird nicht benachrichtigt, da sie keinen Zugriff auf dieses Dokument haben",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Als Link beibehalten",
   "Mention": "Erwähnung",
   "Embed": "Einbetten",
@@ -627,6 +628,7 @@
   "edited": "bearbeitet",
   "created the collection": "Sammlung erstellt",
   "mentioned you in": "erwähnte dich in",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "hat einen Kommentar geschrieben zu",
   "resolved a comment on": "löste einen Kommentar auf",
   "reacted {{ emoji }} to your comment on": "reagierte mit {{ emoji }} auf Ihren Kommentar",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Erhalten Sie eine Benachrichtigung, wenn ein Dokument, das Sie abonniert haben oder eine Diskussion an der Sie teilgenommen haben, einen Kommentar erhält",
   "Mentioned": "Erwähnt",
   "Receive a notification when someone mentions you in a document or comment": "Erhalten Sie eine Benachrichtigung, wenn jemand Sie in einem Dokument oder einem Kommentar erwähnt",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Benachrichtigung erhalten, wenn ein Kommentar-Thread, an dem Sie beteiligt waren, gelöst wurde",
   "Reaction added": "Reaktion hinzugefügt",
   "Receive a notification when someone reacts to your comment": "Erhalten Sie eine Benachrichtigung, wenn jemand Sie in einem Kommentar erwähnt",
