fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Foto de perfil",
   "Create a new doc": "Crea un nuevo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} no será notificado, ya que no tiene acceso a este documento",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Mantener como enlace",
   "Mention": "Mencionar",
   "Embed": "Embed",
@@ -627,6 +628,7 @@
   "edited": "editó",
   "created the collection": "creó la colección",
   "mentioned you in": "te mencionó en",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "dejó un comentario en",
   "resolved a comment on": "resolvió un comentario en",
   "reacted {{ emoji }} to your comment on": "reaccionó {{ emoji }} a tu comentario el",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Recibir una notificación cuando un documento al que estás suscrito o un hilo en el que has participado recibe un comentario",
   "Mentioned": "Mencionado",
   "Receive a notification when someone mentions you in a document or comment": "Recibir una notificación cuando alguien te mencione en un documento o comentario",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Recibir una notificación cuando se resuelva un hilo de comentarios en el que participó",
   "Reaction added": "Reacción añadida",
   "Receive a notification when someone reacts to your comment": "Recibir una notificación cuando alguien reaccione a tu comentario",
