--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Profilový obrázek",
   "Create a new doc": "Vytvořit nový dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Zachovat jako odkaz",
   "Mention": "Mention",
   "Embed": "Embed",
@@ -627,6 +628,7 @@
   "edited": "upraveno",
   "created the collection": "vytvořil sbírku",
   "mentioned you in": "zmínil vás v",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "zanechal komentář k",
   "resolved a comment on": "vyřešil komentář dne",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Dostat upozornění, když dokument, k jehož odběru jste přihlášeni, nebo vlákno, jehož jste se účastnili, obdrží komentář",
   "Mentioned": "Zmínky",
   "Receive a notification when someone mentions you in a document or comment": "Dostat upozornění, když se o vás někdo zmíní v dokumentu nebo komentáři",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Dostat upozornění, když bude vyřešeno vlákno komentářů, do kterého jste byli zapojeni",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
