fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Immagine del profilo",
   "Create a new doc": "Crea un nuovo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} Non verrà notificato, in quanto Non",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Mantieni come link",
   "Mention": "Menzione",
   "Embed": "Incorpora",
@@ -627,6 +628,7 @@
   "edited": "modificato",
   "created the collection": "Ha creato la raccolta",
   "mentioned you in": "Ti ha menzionato in",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "Lasciato un commento",
   "resolved a comment on": "Risolto un commento",
   "reacted {{ emoji }} to your comment on": "ha reagito con {{ emoji }} al tuo commento su",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Ricevi una notifica quando un documento a cui sei iscritto o un argomento a cui hai partecipato riceve un commento",
   "Mentioned": "Ha menzionato",
   "Receive a notification when someone mentions you in a document or comment": "Ricevi una notifica quando qualcuno ti menziona in un documento o in un commento",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
