fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "プロフィール画像",
   "Create a new doc": "ドキュメントを作成",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} はこのドキュメントへのアクセス権限がないため、通知されません",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "リンクとして保持",
   "Mention": "メンション",
   "Embed": "埋め込み",
@@ -627,6 +628,7 @@
   "edited": "編集済み",
   "created the collection": "コレクションを作成しました",
   "mentioned you in": "あなたがメンションされました",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "がコメントを残しました",
   "resolved a comment on": "コメントを解決しました：",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "通知を有効にしているドキュメントや参加したスレッドにコメントされたときに通知を受け取る",
   "Mentioned": "メンション",
   "Receive a notification when someone mentions you in a document or comment": "誰かがあなたをドキュメントやコメントでメンションしたときに通知を受け取る",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "参加したコメントスレッドが解決されたときに通知を受け取る",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
