fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Profielfoto",
   "Create a new doc": "Maak een nieuw document",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} wordt niet verwittigd omdat ze geen toegang hebben tot dit document",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Behoud als link",
   "Mention": "Vermelding",
   "Embed": "Insluiten",
@@ -627,6 +628,7 @@
   "edited": "gewijzigd",
   "created the collection": "maakte de collectie",
   "mentioned you in": "vermeldde je in",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "liet een reactie achter op",
   "resolved a comment on": "heeft een reactie opgelost op",
   "reacted {{ emoji }} to your comment on": "reageerde met {{ emoji }} op jouw reactie op",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Ontvang een melding wanneer een document waarop je geabonneerd bent, of een thread waaraan je hebt deelgenomen, een opmerking ontvangt",
   "Mentioned": "Vermeld",
   "Receive a notification when someone mentions you in a document or comment": "Ontvang een melding wanneer iemand je vermeldt in een document of opmerking",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Ontvang een melding wanneer een reactie waar je bij betrokken was is opgelost",
   "Reaction added": "Reactie toegevoegd",
   "Receive a notification when someone reacts to your comment": "Ontvang een melding wanneer iemand reageert op jouw reactie",
