fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Imagem de perfil",
   "Create a new doc": "Criar um novo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
@@ -627,6 +628,7 @@
   "edited": "alterado",
   "created the collection": "criar coleção",
   "mentioned you in": "mencionou-te em",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "deixou um comentário em",
   "resolved a comment on": "resolved a comment on",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Receber notificação quando um documento em que está inscrito ou um tópico em que participou receber um comentário",
   "Mentioned": "Mencionado",
   "Receive a notification when someone mentions you in a document or comment": "Receber notificação quando alguém o mencionar num documento ou comentário",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
