fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Profilbild",
   "Create a new doc": "Skapa nytt dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Behåll som länk",
   "Mention": "Nämn",
   "Embed": "Bädda in",
@@ -627,6 +628,7 @@
   "edited": "redigerad",
   "created the collection": "skapade samlingen",
   "mentioned you in": "nämnde dig i",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "lämnade en kommentar på",
   "resolved a comment on": "löste en kommentar på",
   "reacted {{ emoji }} to your comment on": "reagerade {{ emoji }} på din kommentar på",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Få ett meddelande när ett dokument du prenumererar på eller en tråd du deltog i får en kommentar",
   "Mentioned": "Omnämnd",
   "Receive a notification when someone mentions you in a document or comment": "Få ett meddelande när någon nämner dig i ett dokument eller en kommentar",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
   "Reaction added": "Reaktion tillagd",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
