fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Аватар",
   "Create a new doc": "Створіть новий документ",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} не буде повідомлено, тому що він не має доступу до цього документа",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
@@ -627,6 +628,7 @@
   "edited": "відредаговано",
   "created the collection": "створено колекцію",
   "mentioned you in": "згадав вас у",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "залишив коментар до",
   "resolved a comment on": "resolved a comment on",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Отримувати сповіщення, коли документ, на який ви підписані, або ланцюжок, у якому ви брали участь, отримує коментар",
   "Mentioned": "Згадано",
   "Receive a notification when someone mentions you in a document or comment": "Отримувати сповіщення, коли хтось згадує вас у документі чи коментарі",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
