fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "个人头像",
   "Create a new doc": "新建文档",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} 不会被通知，因为他们没有访问此文档的权限",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "保留为链接",
   "Mention": "提及",
   "Embed": "嵌入",
@@ -627,6 +628,7 @@
   "edited": "编辑",
   "created the collection": "文档集已创建",
   "mentioned you in": "提及您在",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "留下评论在",
   "resolved a comment on": "回复了一个评论于",
   "reacted {{ emoji }} to your comment on": "对您的评价做出了 {{ emoji }} 反应",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "每当你订阅的文档或参与的话题收到评论时收到通知",
   "Mentioned": "被提及",
   "Receive a notification when someone mentions you in a document or comment": "每当有人在文档或评论中提及你时收到通知",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "当您参与的评论帖子标记为解决时将收到通知",
   "Reaction added": "添加回应",
   "Receive a notification when someone reacts to your comment": "当有人回复您的评论时收到通知",
