fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "大頭貼",
   "Create a new doc": "建立新文件",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }}不會被通知，因為他們沒有這個文件的存取權",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "保留為連結",
   "Mention": "Mention",
   "Embed": "嵌入",
@@ -627,6 +628,7 @@
   "edited": "已編輯",
   "created the collection": "建立文件集",
   "mentioned you in": "提到了您:",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "發表評論",
   "resolved a comment on": "標記評論為已解決",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "當您訂閱的文件或參與的話題收到評論時收到通知",
   "Mentioned": "提及到",
   "Receive a notification when someone mentions you in a document or comment": "當有人在文件或評論中提及您時收到通知",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
