fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Ảnh đại diện",
   "Create a new doc": "Tạo một tài liệu mới",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} sẽ không được thông báo, bởi vì họ không có quyền truy cập tài liệu này",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Giữ dạng liên kết",
   "Mention": "Nhắc đến",
   "Embed": "Nhúng",
@@ -627,6 +628,7 @@
   "edited": "đã chỉnh sửa",
   "created the collection": "tạo một bộ sưu tập",
   "mentioned you in": "mentioned you in",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "left a comment on",
   "resolved a comment on": "resolved a comment on",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Nhận thông báo khi tài liệu bạn đã đăng ký hoặc chủ đề bạn tham gia nhận được nhận xét",
   "Mentioned": "Được nhắc đến",
   "Receive a notification when someone mentions you in a document or comment": "Nhận thông báo khi ai đó đề cập đến bạn trong tài liệu hoặc nhận xét",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
