fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Imagem do perfil",
   "Create a new doc": "Criar um novo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} não será notificado, pois não tem acesso a este documento",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Manter como link",
   "Mention": "Menção",
   "Embed": "Incorporar",
@@ -627,6 +628,7 @@
   "edited": "editado",
   "created the collection": "criou a coleção",
   "mentioned you in": "mencionou você em",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "deixou um comentário em",
   "resolved a comment on": "resolveu um comentário em",
   "reacted {{ emoji }} to your comment on": "reagiu com {{ emoji }} ao seu comentário em",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Receber uma notificação quando um documento que você está inscrito ou um tópico em que você participou recebe um comentário",
   "Mentioned": "Mencionado",
   "Receive a notification when someone mentions you in a document or comment": "Receba uma notificação quando alguém mencionar você em um documento ou comentário",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receber uma notificação quando um tópico de comentários em que você participou for resolvido",
   "Reaction added": "Reação adicionada",
   "Receive a notification when someone reacts to your comment": "Receber notificação quando alguém reagir ao seu comentário",
