--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Gambar profil",
   "Create a new doc": "Buat dokumen baru",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
@@ -627,6 +628,7 @@
   "edited": "diedit",
   "created the collection": "created the collection",
   "mentioned you in": "mentioned you in",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "left a comment on",
   "resolved a comment on": "resolved a comment on",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Terima pemberitahuan saat dokumen langganan Anda atau utas yang Anda ikuti menerima komentar",
   "Mentioned": "Di-mention",
   "Receive a notification when someone mentions you in a document or comment": "Terima pemberitahuan ketika seseorang me-mention Anda dalam dokumen atau komentar",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
   "Reaction added": "Reaction added",
   "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
