fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -484,6 +484,7 @@
   "Profile picture": "Profilbilde",
   "Create a new doc": "Lag et nytt dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} vil ikke bli varslet, da de ikke har tilgang til dette dokumentet",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
   "Keep as link": "Behold som lenke",
   "Mention": "Nevn",
   "Embed": "Bygg inn",
@@ -627,6 +628,7 @@
   "edited": "redigert",
   "created the collection": "opprettet samlingen",
   "mentioned you in": "nevnte deg i",
+  "mentioned your group in": "mentioned your group in",
   "left a comment on": "la igjen en kommentar på",
   "resolved a comment on": "løste en kommentar på",
   "reacted {{ emoji }} to your comment on": "reagerte med {{ emoji }} til din kommentar på",
@@ -1104,6 +1106,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Motta en varsling når et dokument du abonnerer på eller en tråd du har deltatt i mottar en kommentar",
   "Mentioned": "Nevnt",
   "Receive a notification when someone mentions you in a document or comment": "Motta en varsling når noen nevner deg i et dokument eller en kommentar",
+  "Group mentions": "Group mentions",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
   "Receive a notification when a comment thread you were involved in is resolved": "Motta et varsel når en kommentartråd du deltok i er løst",
   "Reaction added": "Reaksjon lagt til",
   "Receive a notification when someone reacts to your comment": "Motta en notifikasjon når noen reagerer på din kommentar",
