fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -466,7 +466,6 @@
   "New email": "Nouveau courriel",
   "Email can't be empty": "L'adresse électronique ne peut pas être vide",
   "Your import completed": "Votre importation est terminée",
-  "Sorry, invalid embed link": "Désolé, lien d'intégration invalide",
   "Previous match": "Occurence précédente",
   "Next match": "Prochaine occurence",
   "Find and replace": "Rechercher et remplacer",
@@ -508,6 +507,7 @@
   "Code": "Code",
   "Comment": "Commenter",
   "Create link": "Créer un lien",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Désolé, une erreur s'est produite lors de la création du lien",
   "Create a new child doc": "Créer un nouveau document enfant",
   "Delete table": "Supprimer ce tableau",
@@ -573,6 +573,7 @@
   "Video": "Vidéo",
   "None": "Abc",
   "Delete embed": "Supprimer l'intégration",
+  "Upload an image": "Upload an image",
   "Could not import file": "Le fichier n'a pas pu être importé",
   "Unsubscribed from document": "Se désabonner du document",
   "Unsubscribed from collection": "Désabonné de la collection",
