fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -466,7 +466,6 @@
   "New email": "Új e-mail cím",
   "Email can't be empty": "Az e-mail mező nem lehet üres",
   "Your import completed": "Your import completed",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "Előző találat",
   "Next match": "Következő találat",
   "Find and replace": "Keresés és csere",
@@ -508,6 +507,7 @@
   "Code": "Kód",
   "Comment": "Hozzászólás",
   "Create link": "Hivatkozás létrehozása",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Sajnálom, valami hiba merült fel a hivatkozás létrehozása közben",
   "Create a new child doc": "Új doku létrehozása",
   "Delete table": "Táblázat törlése",
@@ -573,6 +573,7 @@
   "Video": "Videó",
   "None": "Nincs",
   "Delete embed": "Delete embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "Fájl importálása nem lehetséges",
   "Unsubscribed from document": "Leiratkozott a dokumentumról",
   "Unsubscribed from collection": "Leiratkozott a dokumentumról",
