fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -466,7 +466,6 @@
   "New email": "Nowy e-mail",
   "Email can't be empty": "Pole adresu e-mail nie może być puste",
   "Your import completed": "Twój import został zakończony",
-  "Sorry, invalid embed link": "Przepraszamy, nieprawidłowy link osadzenia",
   "Previous match": "Poprzednie dopasowanie",
   "Next match": "Następne dopasowanie",
   "Find and replace": "Znajdź i zamień",
@@ -508,6 +507,7 @@
   "Code": "Kod",
   "Comment": "Komentarz",
   "Create link": "Utwórz link",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Niestety, wystąpił błąd podczas tworzenia łącza",
   "Create a new child doc": "Utwórz nowy dokument podrzędny",
   "Delete table": "Usuń tabelę",
@@ -573,6 +573,7 @@
   "Video": "Wideo",
   "None": "Brak",
   "Delete embed": "Usuń osadzenie",
+  "Upload an image": "Upload an image",
   "Could not import file": "Nie można zaimportować pliku",
   "Unsubscribed from document": "Wypisano z dokumentu",
   "Unsubscribed from collection": "Zrezygnowano z subskrypcji kolekcji",
