fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -466,7 +466,6 @@
   "New email": "새로운 이메일",
   "Email can't be empty": "이메일은 비워둘 수 없음",
   "Your import completed": "불러오기 완료됨",
-  "Sorry, invalid embed link": "잘못된 임베드 링크",
   "Previous match": "이전 찾기",
   "Next match": "다음 찾기",
   "Find and replace": "찾아 바꾸기",
@@ -508,6 +507,7 @@
   "Code": "코드",
   "Comment": "댓글",
   "Create link": "링크 생성",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "죄송합니다, 링크 생성 중 에러가 발생했습니다",
   "Create a new child doc": "새 하위 문서 생성",
   "Delete table": "테이블 삭제",
@@ -573,6 +573,7 @@
   "Video": "동영상",
   "None": "없음",
   "Delete embed": "임베드 삭제",
+  "Upload an image": "Upload an image",
   "Could not import file": "파일을 가져올 수 없음",
   "Unsubscribed from document": "문서 구독이 취소됨",
   "Unsubscribed from collection": "컬렉션 구독 취소",
