--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -466,7 +466,6 @@
   "New email": "Neue E-Mail",
   "Email can't be empty": "E-Mail darf nicht leer sein",
   "Your import completed": "Ihr Import ist abgeschlossen",
-  "Sorry, invalid embed link": "Ungültiger Einbindungslink",
   "Previous match": "Vorheriger Treffer",
   "Next match": "Nächster Treffer",
   "Find and replace": "Suchen und Ersetzen",
@@ -508,6 +507,7 @@
   "Code": "Code",
   "Comment": "Kommentieren",
   "Create link": "Link erstellen",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Beim Erstellen des Links ist leider ein Fehler aufgetreten",
   "Create a new child doc": "Neues untergeordnetes Dokument erstellen",
   "Delete table": "Tabelle löschen",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "Keine",
   "Delete embed": "Einbindung löschen",
+  "Upload an image": "Upload an image",
   "Could not import file": "Datei konnte nicht importiert werden",
   "Unsubscribed from document": "Dokument nicht abonniert",
   "Unsubscribed from collection": "Von der Sammlung abgemeldet",
