fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -466,7 +466,6 @@
   "New email": "Nuevo correo electrónico",
   "Email can't be empty": "El correo electrónico no puede estar vacío",
   "Your import completed": "Tu importación se completó",
-  "Sorry, invalid embed link": "Enlace incrustado inválido",
   "Previous match": "Coincidencia anterior",
   "Next match": "Coincidencia siguiente",
   "Find and replace": "Buscar y reemplazar",
@@ -508,6 +507,7 @@
   "Code": "Código",
   "Comment": "Comentar",
   "Create link": "Nuevo enlace",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Lo sentimos, se ha producido un error al crear el enlace",
   "Create a new child doc": "Crear un nuevo documento hijo",
   "Delete table": "Eliminar tabla",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "Nada",
   "Delete embed": "Eliminar incrustado",
+  "Upload an image": "Upload an image",
   "Could not import file": "No se pudo importar el archivo",
   "Unsubscribed from document": "Desuscrito del documento",
   "Unsubscribed from collection": "Dado de baja de la colección",
