--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -466,7 +466,6 @@
   "New email": "New email",
   "Email can't be empty": "Email can't be empty",
   "Your import completed": "Váš import byl dokončen",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "Předchozí shoda",
   "Next match": "Další shoda",
   "Find and replace": "Najít a nahradit",
@@ -508,6 +507,7 @@
   "Code": "Kód",
   "Comment": "Komentář",
   "Create link": "Vytvořit odkaz",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Omlouváme se, při vytváření odkazu došlo k chybě",
   "Create a new child doc": "Vytvořit nový podřazený dokument",
   "Delete table": "Odstranit tabulku",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "Soubor nelze importovat",
   "Unsubscribed from document": "Upozornění vypnuta",
   "Unsubscribed from collection": "Unsubscribed from collection",
