--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -466,7 +466,6 @@
   "New email": "Nuova email",
   "Email can't be empty": "L'email non può essere vuota",
   "Your import completed": "Importazione completata",
-  "Sorry, invalid embed link": "Link d'incorporamento non valido",
   "Previous match": "Pagina precedente",
   "Next match": "Prossima Partita",
   "Find and replace": "Trova e sostituisci",
@@ -508,6 +507,7 @@
   "Code": "Codice",
   "Comment": "Commenta",
   "Create link": "Crea collegamento",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Spiacenti, si è verificato un errore durante la creazione del collegamento",
   "Create a new child doc": "Crea un nuovo documento",
   "Delete table": "Elimina tabella",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "Nessuno",
   "Delete embed": "Elimina incorporamento",
+  "Upload an image": "Upload an image",
   "Could not import file": "Impossibile importare il file",
   "Unsubscribed from document": "Annullata l'iscrizione al documento",
   "Unsubscribed from collection": "Annullata l'iscrizione alla raccolta",
