--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -466,7 +466,6 @@
   "New email": "新しいメールアドレス",
   "Email can't be empty": "メールアドレスを入力してください",
   "Your import completed": "インポートが完了しました",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "前の一致",
   "Next match": "次の一致",
   "Find and replace": "検索と置換",
@@ -508,6 +507,7 @@
   "Code": "コード",
   "Comment": "コメント",
   "Create link": "リンクを作成",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "リンクの作成に失敗しました",
   "Create a new child doc": "ドキュメントを作成",
   "Delete table": "テーブルを削除",
@@ -573,6 +573,7 @@
   "Video": "動画",
   "None": "なし",
   "Delete embed": "Delete embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "ファイルをインポートできませんでした",
   "Unsubscribed from document": "ドキュメントの通知を解除しました",
   "Unsubscribed from collection": "コレクションの登録を解除しました",
