fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -466,7 +466,6 @@
   "New email": "Nieuw e-mailadres",
   "Email can't be empty": "E-mail mag niet leeg zijn",
   "Your import completed": "Importeren voltooid",
-  "Sorry, invalid embed link": "Sorry, ongeldige insluitingslink",
   "Previous match": "Vorige match",
   "Next match": "Volgende match",
   "Find and replace": "Zoek en vervang",
@@ -508,6 +507,7 @@
   "Code": "Code",
   "Comment": "Reageer",
   "Create link": "Link maken",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Sorry, er is een fout opgetreden bij het maken van de link",
   "Create a new child doc": "Maak een nieuw subdocument",
   "Delete table": "Tabel verwijderen",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
+  "Upload an image": "Upload an image",
   "Could not import file": "Kon bestand niet importeren",
   "Unsubscribed from document": "Afgemeld voor document",
   "Unsubscribed from collection": "Afgemeld voor collectie",
