fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -466,7 +466,6 @@
   "New email": "New email",
   "Email can't be empty": "Email can't be empty",
   "Your import completed": "Importação foi concluída",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "Correspondência anterior",
   "Next match": "Correspondência seguinte",
   "Find and replace": "Procurar e substituir",
@@ -508,6 +507,7 @@
   "Code": "Código",
   "Comment": "Comentar",
   "Create link": "Criar link",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Desculpe, ocorreu um erro ao criar o link",
   "Create a new child doc": "Criar novo subdocumento",
   "Delete table": "Eliminar tabela",
@@ -573,6 +573,7 @@
   "Video": "Vídeo",
   "None": "Nenhum",
   "Delete embed": "Delete embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "Não foi possível importar o ficheiro",
   "Unsubscribed from document": "Desinscrever do documento",
   "Unsubscribed from collection": "Unsubscribed from collection",
