fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -466,7 +466,6 @@
   "New email": "Ny e-post",
   "Email can't be empty": "E-post kan inte vara tomt",
   "Your import completed": "Din import slutfördes",
-  "Sorry, invalid embed link": "Tyvärr, ogiltig inbäddslänk",
   "Previous match": "Föregående träff",
   "Next match": "Nästa träff",
   "Find and replace": "Sök och ersätt",
@@ -508,6 +507,7 @@
   "Code": "Kod",
   "Comment": "Kommentar",
   "Create link": "Skapa länk",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Tyvärr, ett fel uppstod när länken skapades",
   "Create a new child doc": "Skapa ett nytt underordnat dokument",
   "Delete table": "Ta bort tabell",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "Ingen",
   "Delete embed": "Ta bort inbäddning",
+  "Upload an image": "Upload an image",
   "Could not import file": "Kan inte importera fil",
   "Unsubscribed from document": "Prenumeration avslutad från dokument",
   "Unsubscribed from collection": "Avprenumerera från samling",
