--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -466,7 +466,6 @@
   "New email": "New email",
   "Email can't be empty": "Email can't be empty",
   "Your import completed": "Ваш імпорт завершено",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "Попередній збіг",
   "Next match": "Наступний збіг",
   "Find and replace": "Знайти та замінити",
@@ -508,6 +507,7 @@
   "Code": "Код",
   "Comment": "Коментар",
   "Create link": "Створити посилання",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "На жаль, під час створення посилання сталася помилка",
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Видалити таблицю",
@@ -573,6 +573,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "Не вдалося імпортувати файл",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
