fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -466,7 +466,6 @@
   "New email": "新电子邮箱",
   "Email can't be empty": "电子邮箱不能为空",
   "Your import completed": "导入已完成",
-  "Sorry, invalid embed link": "抱歉，无效的嵌入链接",
   "Previous match": "上一匹配",
   "Next match": "下一匹配",
   "Find and replace": "查找并替换",
@@ -508,6 +507,7 @@
   "Code": "代码",
   "Comment": "评论",
   "Create link": "创建链接",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "抱歉，创建链接时发生错误",
   "Create a new child doc": "创建一个新的子文档",
   "Delete table": "删除表格",
@@ -573,6 +573,7 @@
   "Video": "视频",
   "None": "空",
   "Delete embed": "删除嵌入",
+  "Upload an image": "Upload an image",
   "Could not import file": "无法导入文件",
   "Unsubscribed from document": "取消订阅文档",
   "Unsubscribed from collection": "取消订阅集合",
