fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -466,7 +466,6 @@
   "New email": "新電子郵件",
   "Email can't be empty": "電子郵件不能留空",
   "Your import completed": "您的匯入已完成",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "之前的匹配結果",
   "Next match": "下一筆",
   "Find and replace": "尋找與取代",
@@ -508,6 +507,7 @@
   "Code": "程式碼",
   "Comment": "評論",
   "Create link": "建立超連結",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "抱歉，建立分享連結時發生錯誤",
   "Create a new child doc": "建立子文件",
   "Delete table": "刪除表格",
@@ -573,6 +573,7 @@
   "Video": "影片",
   "None": "無",
   "Delete embed": "Delete embed",
+  "Upload an image": "Upload an image",
   "Could not import file": "無法匯入檔案",
   "Unsubscribed from document": "取消訂閱文件",
   "Unsubscribed from collection": "取消訂閱文件",
